--- a/korge.ipynb
+++ b/korge.ipynb
@@ -40,15 +40,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5e7ce2db",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: DummyOpenglContext.makeCurrent (using a Dummy implementation)\n"
+      "Line_2.jupyter-kts (4:5 - 18) None of the following functions can be called with the arguments supplied: \n",
+      "public final suspend operator fun invoke(config: Korge.Config): Unit defined in com.soywiz.korge.KorgeHeadless\n",
+      "public final suspend operator fun invoke(title: String = ..., width: Int = ..., height: Int = ..., virtualWidth: Int = ..., virtualHeight: Int = ..., icon: Bitmap? = ..., iconPath: String? = ..., imageFormats: ImageFormat = ..., quality: GameWindow.Quality = ..., targetFps: Double = ..., scaleAnchor: Anchor = ..., scaleMode: ScaleMode = ..., clipBorders: Boolean = ..., bgcolor: RGBA? = ..., debug: Boolean = ..., fullscreen: Boolean? = ..., args: Array<String> = ..., timeProvider: TimeProvider = ..., injector: AsyncInjector = ..., blocking: Boolean = ..., debugAg: Boolean = ..., entry: suspend Stage.() -> Unit): Unit defined in com.soywiz.korge.KorgeHeadless\n",
+      "Line_2.jupyter-kts (8:21 - 30) Unresolved reference. None of the following candidates is applicable because of receiver type mismatch: \n",
+      "public inline fun Container.solidRect(width: Double, height: Double, color: RGBA = ..., callback: SolidRect.() -> Unit = ...): SolidRect defined in com.soywiz.korge.view\n",
+      "public inline fun Container.solidRect(width: Int, height: Int, color: RGBA = ..., callback: SolidRect.() -> Unit = ...): SolidRect defined in com.soywiz.korge.view\n",
+      "Line_2.jupyter-kts (9:13 - 21) Function invocation 'rotation(...)' expected\n",
+      "Line_2.jupyter-kts (9:13 - 21) Unresolved reference. None of the following candidates is applicable because of receiver type mismatch: \n",
+      "public fun <T : View> TypeVariable(T).rotation(rot: Angle): TypeVariable(T) defined in com.soywiz.korge.view\n",
+      "Line_2.jupyter-kts (10:13 - 19) Unresolved reference. None of the following candidates is applicable because of receiver type mismatch: \n",
+      "public fun IRectangleInt.anchor(ax: Double, ay: Double): PointInt defined in com.soywiz.korma.geom\n",
+      "Line_2.jupyter-kts (11:19 - 21) The floating-point literal does not conform to the expected type RgbaPremultipliedArray\n",
+      "Line_2.jupyter-kts (11:21 - 22) No value passed for parameter 'colorOffset'\n",
+      "Line_2.jupyter-kts (11:21 - 22) No value passed for parameter 'alpha'\n",
+      "Line_2.jupyter-kts (11:21 - 22) No value passed for parameter 'alphaOffset'\n",
+      "Line_2.jupyter-kts (11:21 - 22) No value passed for parameter 'count'\n",
+      "Line_2.jupyter-kts (12:13 - 21) Unresolved reference. None of the following candidates is applicable because of receiver type mismatch: \n",
+      "public inline fun <T : View> TypeVariable(T).position(point: IPoint): TypeVariable(T) defined in com.soywiz.korge.view\n",
+      "public fun <T : View> TypeVariable(T).position(x: Double, y: Double): TypeVariable(T) defined in com.soywiz.korge.view\n",
+      "public fun <T : View> TypeVariable(T).position(x: Float, y: Float): TypeVariable(T) defined in com.soywiz.korge.view\n",
+      "public fun <T : View> TypeVariable(T).position(x: Int, y: Int): TypeVariable(T) defined in com.soywiz.korge.view\n",
+      "Line_2.jupyter-kts (17:32 - 40) Overload resolution ambiguity: \n",
+      "public open var <ERROR PROPERTY>: [ERROR : <ERROR PROPERTY TYPE>] defined in root package\n",
+      "public open fun <ERROR FUNCTION>(): [ERROR : <ERROR FUNCTION RETURN TYPE>] defined in root package\n",
+      "Line_2.jupyter-kts (18:32 - 40) Overload resolution ambiguity: \n",
+      "public open var <ERROR PROPERTY>: [ERROR : <ERROR PROPERTY TYPE>] defined in root package\n",
+      "public open fun <ERROR FUNCTION>(): [ERROR : <ERROR FUNCTION RETURN TYPE>] defined in root package\n",
+      "Line_2.jupyter-kts (19:22 - 27) Unresolved reference: stage\n",
+      "Line_2.jupyter-kts (19:43 - 48) Unresolved reference. None of the following candidates is applicable because of receiver type mismatch: \n",
+      "public var UiApplication.views: Views? defined in com.soywiz.korge.view\n",
+      "Line_2.jupyter-kts (20:13 - 18) Unresolved reference. None of the following candidates is applicable because of receiver type mismatch: \n",
+      "public var UiApplication.views: Views? defined in com.soywiz.korge.view"
      ]
     }
    ],
@@ -56,7 +87,7 @@
     "lateinit var bitmap: Bitmap\n",
     "\n",
     "runBlocking {\n",
-    "    Korge(width = 512, height = 512, bgcolor = Colors[\"#2b2b2b\"], gameWindow = AwtGameWindow(false, false)) {\n",
+    "    KorgeHeadless(width = 512, height = 512, bgcolor = Colors[\"#2b2b2b\"], gameWindow = AwtGameWindow(false, false)) {\n",
     "        val minDegrees = (-16).degrees\n",
     "        val maxDegrees = (+16).degrees\n",
     "\n",
